fix: wrong font name

--- a/resize.css
+++ b/resize.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Redaction-20";
+  src: url("https://jasoncheng.me/fonts/Redaction/Redaction20-Regular.otf");
+}
+
 div {
   margin-bottom: 1vh;
 }
